...
    );
  }

  return (
    <View style={commonStyles.container}>
      <PageHeader
        title="Editar Perfil"
        onBack={() => navigation.goBack()}
      />

      <KeyboardAvoidingView
        behavior={Platform.OS === 'ios' ? 'padding' : null}
        style={{ flex: 1 }}
...
